@@ -1,3 +1,15 @@
+2008-02-13  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Alexey P.
+
+        Tests for <rdar://problem/5737003> REGRESSION (r27747): can't browse pictures on fastcupid.com
+
+        Ensure that the basic arithmetic operands can correctly handle the NaN -> boolean conversion
+
+        * fast/js/convert-nan-to-bool.html: Added.
+        * fast/js/convert-nan-to-bool-expected.txt: Added.
+        * fast/js/resources/convert-nan-to-bool.js: Added.
+
 2008-02-12  Dan Bernstein  <mitz@apple.com>
 
         Rubber-stamped by Adam Roben.
